--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -47,12 +47,9 @@
     {% endif %}
 {% endmacro %}
 
-{% macro afficher_boutons_actions(objet, current_user, id_field, modify_route, delete_route, validate_route, type_objet, current_page) %}
-    {# Debug : Affichage des valeurs pour vérification #}
-    <!-- DEBUG: type_objet = "{{ type_objet }}" -->
-    <!-- DEBUG: current_page = "{{ current_page }}" -->
+{% macro afficher_boutons_actions(objet, current_user, id_field, modify_route, delete_route, validate_route, type_objet, current_page,
+delete_form, validate_form) %}
     {% set page_attendue = 'page_' + type_objet %}
-    <!-- DEBUG: page_attendue = "{{ page_attendue }}" -->
 
     {% if current_user.is_authenticated %}
         {% if current_page == page_attendue %}
@@ -63,7 +60,8 @@
                         <i class="bi bi-pencil"></i>
                     </button>
                     <form method="POST" action="{{ url_for(delete_route, **{id_field: objet[id_field]}) }}" style="display: inline-block;">
-                        <button type="submit" class="btn btn-danger btn-sm square-btn" title="Supprimer">
+                        {{ delete_form.hidden_tag() }}
+                        <button type="submit" class="btn btn-danger btn-sm square-btn" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
                             <i class="bi bi-trash"></i>
                         </button>
                     </form>
@@ -72,6 +70,7 @@
                 {% if objet.statut.value == 'EN_ATTENTE' %}
                     <div class="action-buttons d-flex gap-1">
                         <form method="POST" action="{{ url_for(validate_route, **{id_field: objet[id_field]}) }}" style="display: inline-block;">
+                            {{ validate_form.hidden_tag() }}
                             <button type="submit" class="btn btn-success square-btn" title="Valider">
                                 <i class="bi bi-check"></i>
                             </button>
@@ -80,7 +79,8 @@
                             <i class="bi bi-pencil"></i>
                         </button>
                         <form method="POST" action="{{ url_for(delete_route, **{id_field: objet[id_field]}) }}" style="display: inline-block;">
-                            <button type="submit" class="btn btn-danger square-btn" title="Supprimer">
+                            {{ delete_form.hidden_tag() }}
+                            <button type="submit" class="btn btn-danger square-btn" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
                                 <i class="bi bi-trash"></i>
                             </button>
                         </form>
@@ -91,7 +91,8 @@
                             <i class="bi bi-pencil"></i>
                         </button>
                         <form method="POST" action="{{ url_for(delete_route, **{id_field: objet[id_field]}) }}" style="display: inline-block;">
-                            <button type="submit" class="btn btn-danger square-btn" title="Supprimer">
+                            {{ delete_form.hidden_tag() }}
+                            <button type="submit" class="btn btn-danger square-btn" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet élément ?');">
                                 <i class="bi bi-trash"></i>
                             </button>
                         </form>
@@ -106,11 +107,12 @@
     {% else %}
         <!-- DEBUG: Utilisateur non authentifié -->
     {% endif %}
+
 {% endmacro %}
 
 
 <!-- ETABLISSEMENT -->
-{% macro afficher_etablissement(etablissement, current_user, form_edit, current_page) %}
+{% macro afficher_etablissement(etablissement, current_user, form_edit, current_page, delete_form, validate_form) %}
     <div class="carte">
         <div class="card-image-container">
             {{ afficher_image_ou_placeholder(etablissement) }}
@@ -130,7 +132,8 @@
                 {% endif %}
                 <p class="description" id="etablissement-{{ etablissement.id_etab }}-description">Description : {{ etablissement.description }}</p>
                 {{ afficher_boutons_actions(etablissement, current_user, 'id_etab',
-                'maps.modifier_etablissement', 'maps.supprimer_etablissement', 'maps.valider_etablissement', 'etablissement', current_page) }}
+                'maps.modifier_etablissement', 'maps.supprimer_etablissement', 'maps.valider_etablissement', 'etablissement', current_page,
+                        delete_form, validate_form) }}
             </div>
             {{ afficher_formulaire_edition_etablissement(etablissement, form_edit, current_user) }}
             <a href="{{ url_for('main.afficher_etablissement_unique', id_etab=etablissement.id_etab) }}" class="btn btn-primary">Voir plus</a>
@@ -147,6 +150,7 @@
         }
     </script>
 {% endmacro %}
+
 
 
 {% macro afficher_formulaire_edition_etablissement(etablissement, form_edit, current_user) %}
@@ -206,7 +210,7 @@
 {% endmacro %}
 
 <!-- FLAN -->
-{% macro afficher_flan(flan, current_user, form, current_page) %}
+{% macro afficher_flan(flan, current_user, form, current_page, delete_form, validate_form) %}
     <div class="carte">
         <div class="card-image-container">
             {{ afficher_image_ou_placeholder(flan) }}
@@ -223,12 +227,12 @@
                 <p class="type" id="flan-{{ flan.id_flan }}-description">Description : {{ flan.description | default("Flantastique") }}</p>
                 <p class="flan-price">Prix : {{ "%.2f"|format(flan.prix) }} €</p>
                 {{ afficher_boutons_actions(flan, current_user, 'id_flan',
-                'main.modifier_flan', 'main.supprimer_flan', 'main.valider_flan', 'flan', current_page) }}
+                'main.modifier_flan', 'main.supprimer_flan', 'main.valider_flan', 'flan', current_page,
+                        delete_form, validate_form) }}
             </div>
             {{ afficher_formulaire_edition_flan(flan, form) }}
         </div>
         <a href="{{ url_for('main.afficher_flan_unique', id_flan=flan.id_flan) }}" class="btn btn-primary">Voir plus</a>
-
     </div>
     <script>
         function editFlan(idFlan) {
@@ -257,6 +261,7 @@
         }
     </script>
 {% endmacro %}
+
 
 
 {% macro afficher_formulaire_edition_flan(flan, form) %}
@@ -299,7 +304,7 @@
 
 
 <!-- EVALUATION -->
-{% macro afficher_evaluation(evaluation, current_user, form, current_page) %}
+{% macro afficher_evaluation(evaluation, current_user, form, current_page, delete_form, validate_form) %}
     <div class="card">
         <div class="card-content">
             <div class="card-header">
@@ -317,7 +322,8 @@
                     {{ afficher_criteres_evaluation(evaluation) }}
                     {{ afficher_boutons_actions(evaluation, current_user,
                     'id_eval', 'main.afficher_evaluation_unique', 'main.supprimer_evaluation', 'main.valider_evaluation',
-                    'evaluation', current_page) }}
+                    'evaluation', current_page,
+                            delete_form, validate_form) }}
                 </div>
                 {{ afficher_formulaire_edition_evaluation(evaluation, form) }}
             {% else %}
@@ -337,6 +343,7 @@
         }
     </script>
 {% endmacro %}
+
 
 
 {% macro afficher_formulaire_edition_evaluation(evaluation, form) %}
@@ -404,7 +411,8 @@
     {% endif %}
     <p class="type">{{ evaluation.description }}</p>
 {% endmacro %}
-{% macro afficher_grille(objet_type, objets, current_user=None, form_edit=None, form_ajout=None, etablissement=None, flan=None) %}
+
+{% macro afficher_grille(objet_type, objets, current_user=None, form_edit=None, form_ajout=None, etablissement=None, flan=None, delete_form=None, validate_form=None) %}
     {% if not objets %}
         <div class="no-results">
             <p>Aucun {{ objet_type }} trouvé.</p>
@@ -413,9 +421,9 @@
         <div class="grille">
             {% for objet in objets %}
                 {% if objet_type == 'evaluation' and form_edit is mapping and objet.id_eval in form_edit %}
-                    {{ afficher_objet(objet_type, objet, current_user, form_edit[objet.id_eval]) }}
+                    {{ afficher_objet(objet_type, objet, current_user, form_edit[objet.id_eval], current_page, delete_form, validate_form) }}
                 {% else %}
-                    {{ afficher_objet(objet_type, objet, current_user, form_edit) }}
+                    {{ afficher_objet(objet_type, objet, current_user, form_edit, current_page, delete_form, validate_form) }}
                 {% endif %}
             {% endfor %}
         </div>
@@ -425,15 +433,18 @@
         {{ afficher_bouton_ajout(objet_type, current_user, etablissement, form_ajout, flan) }}
     {% endif %}
 {% endmacro %}
-{% macro afficher_objet(objet_type, objet, current_user=None, form_edit=None, current_page='') %}
+
+
+{% macro afficher_objet(objet_type, objet, current_user=None, form_edit=None, current_page='', delete_form=None, validate_form=None) %}
     {% if objet_type == 'etablissement' %}
-        {{ afficher_etablissement(objet, current_user, form_edit, current_page) }}
+        {{ afficher_etablissement(objet, current_user, form_edit, current_page, delete_form, validate_form) }}
     {% elif objet_type == 'flan' %}
-        {{ afficher_flan(objet, current_user, form_edit, current_page) }}
+        {{ afficher_flan(objet, current_user, form_edit, current_page, delete_form, validate_form) }}
     {% elif objet_type == 'evaluation' %}
-        {{ afficher_evaluation(objet, current_user, form_edit, current_page) }}
+        {{ afficher_evaluation(objet, current_user, form_edit, current_page, delete_form, validate_form) }}
     {% endif %}
 {% endmacro %}
+
 
 
 
