--- a/app/templates/page_flan.html
+++ b/app/templates/page_flan.html
@@ -4,7 +4,7 @@
     <!-- Détails du flan -->
     <div class="etablissement-header">
         {% set current_page = 'page_flan' %}
-        {{ afficher_objet('flan', flan, current_user, form_flan, current_page,  delete_form, validate_form) }}
+        {{ afficher_objet('flan', flan, current_user, form_flan, current_page) }}
     </div>
 
     <!-- Grille des évaluations avec bouton d'ajout -->
