--- a/app/templates/page_evaluation.html
+++ b/app/templates/page_evaluation.html
@@ -8,7 +8,7 @@
   <div class="container">
       <h1>Evaluation</h1>
       {% set current_page = 'page_evaluation' %}
-      {{ afficher_objet('evaluation', evaluation, current_user, form, current_page, delete_form, validate_form) }}
+      {{ afficher_objet('evaluation', evaluation, current_user, form, current_page) }}
 
           <!-- Bouton retour -->
         <div>
